feat: tour info modal in vertical navigation

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
-
   </body>
+<!--  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=9c3b763915836894e84e16dd28fac929"></script>-->
+
 </html>
